--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "Analytics",
     "Tracking",
     "Events",
-    "Google",
+    "Google"
   ],
   "license": "MIT",
   "homepage": "https://github.com/springload/Analytics.js.git",
